<resources>
    <string name="app_name">MobileAnime</string>
    <string name="tab_newest">Mới nhất</string>
    <string name="tab_all">Tất cả</string>
    <string name="tab_suggest">Đề xuất</string>
    <string name="tab_favorite">Yêu thích</string>
    <string name="action_settings">⋮</string>
    <string name="jsub">Jsub</string>
    <string name="vsub">Vsub</string>
    <string name="search">Tìm kiếm</string>
    <string name="three_dot">⋮</string>
    <string name="back_again">Nhấn lần nữa để thoát</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <string name="refresh_success">Làm mới thành công</string>
    <string name="load_more">Đang tải thêm dữ liệu</string>
    <string name="app_describe">Mobile Anime\n<small><small>Powered by HaJaU</small></small></string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="pre_ep">Tập trước</string>
    <string name="next_ep">Tập sau</string>
    <string name="cur_ep">Tập đang xem</string>
    <string name="anime_name">Anime name</string>
    <string name="down_arrow">▼</string>
    <string name="up_arrow">▲</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
