<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabSelectedTextColor="@color/white">

            <android.support.design.widget.TabItem
                android:id="@+id/tabNewest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_newest" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_all" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabSuggest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_suggest" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_favorite" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/languageSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_scrollFlags="enterAlways">

            <Button
                android:id="@+id/jsub"
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/left_button_ac"
                android:text="@string/jsub"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/vsub"
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/right_button"
                android:text="@string/vsub"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/jsub_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.v4.view.ViewPager
            android:id="@+id/vsub_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_search_category_default"
        app:backgroundTint="@color/colorPrimary"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:tint="@color/white" />

</android.support.design.widget.CoordinatorLayout>